# pyduktape3

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  run-tests.yml
pyduktape3/: __init__.py  _pyduktape3.pyi  _pyduktape3.pyx  duktape.pxd
tests/: test_context.py
